# DFA

./: CMakeLists.txt  LICENSE  README.md  automata.h  main.cpp
src/: CMakeLists.txt  automata.cpp  automata.h
test/: CMakeLists.txt  unit.cpp
